--- a/Data/Bookworm.Data.Models/Bookworm.Data.Models.csproj
+++ b/Data/Bookworm.Data.Models/Bookworm.Data.Models.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Bookworm.Common\Bookworm.Common.csproj" />
     <ProjectReference Include="..\Bookworm.Data.Common\Bookworm.Data.Common.csproj" />
   </ItemGroup>
   
