Created custom attribute for book published year

--- a/Web/Bookworm.Web.ViewModels/Bookworm.Web.ViewModels.csproj
+++ b/Web/Bookworm.Web.ViewModels/Bookworm.Web.ViewModels.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Bookworm.Data.Models\Bookworm.Data.Models.csproj" />
     <ProjectReference Include="..\..\Services\Bookworm.Services.Mapping\Bookworm.Services.Mapping.csproj" />
+    <ProjectReference Include="..\Bookworm.Web.Infrastructure\Bookworm.Web.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
