--- a/Web/Bookworm.Web.Infrastructure/Bookworm.Web.Infrastructure.csproj
+++ b/Web/Bookworm.Web.Infrastructure/Bookworm.Web.Infrastructure.csproj
@@ -13,12 +13,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\Bookworm.Data.Common\Bookworm.Data.Common.csproj" />
+    <ProjectReference Include="..\..\Data\Bookworm.Data\Bookworm.Data.csproj" />
+    <ProjectReference Include="..\..\Services\Bookworm.Services.Messaging\Bookworm.Services.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
