--- a/Tests/Sandbox/Sandbox.csproj
+++ b/Tests/Sandbox/Sandbox.csproj
@@ -37,9 +37,10 @@
     <ProjectReference Include="..\..\Data\Bookworm.Data.Common\Bookworm.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data.Models\Bookworm.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data\Bookworm.Data.csproj" />
-    <ProjectReference Include="..\..\Services\Bookworm.Services.Data\Bookworm.Services.csproj" />
+    <ProjectReference Include="..\..\Services\Bookworm.Services.Data\Bookworm.Services.Data.csproj" />
     <ProjectReference Include="..\..\Services\Bookworm.Services.Mapping\Bookworm.Services.Mapping.csproj" />
     <ProjectReference Include="..\..\Services\Bookworm.Services.Messaging\Bookworm.Services.Messaging.csproj" />
+    <ProjectReference Include="..\..\Services\Bookworm.Services\Bookworm.Services.csproj" />
   </ItemGroup>
 
 </Project>
