--- a/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -35,9 +35,10 @@
     <ProjectReference Include="..\..\Bookworm.Common\Bookworm.Common.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data.Models\Bookworm.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data\Bookworm.Data.csproj" />
-    <ProjectReference Include="..\..\Services\Bookworm.Services.Data\Bookworm.Services.csproj" />
+    <ProjectReference Include="..\..\Services\Bookworm.Services.Data\Bookworm.Services.Data.csproj" />
     <ProjectReference Include="..\..\Services\Bookworm.Services.Mapping\Bookworm.Services.Mapping.csproj" />
     <ProjectReference Include="..\..\Services\Bookworm.Services.Messaging\Bookworm.Services.Messaging.csproj" />
+    <ProjectReference Include="..\..\Services\Bookworm.Services\Bookworm.Services.csproj" />
     <ProjectReference Include="..\Bookworm.Web.Infrastructure\Bookworm.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\Bookworm.Web.ViewModels\Bookworm.Web.ViewModels.csproj" />
   </ItemGroup>
