--- a/Services/Bookworm.Services.Data/Bookworm.Services.Data.csproj
+++ b/Services/Bookworm.Services.Data/Bookworm.Services.Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AntiVirusScanner" Version="1.0.2" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
