--- a/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -53,4 +53,8 @@
 		<ProjectReference Include="..\Bookworm.Web.Infrastructure\Bookworm.Web.Infrastructure.csproj" />
 		<ProjectReference Include="..\Bookworm.Web.ViewModels\Bookworm.Web.ViewModels.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Views\Comment\" />
+	</ItemGroup>
 </Project>
