--- a/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
+++ b/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Sendgrid" Version="9.29.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
