--- a/Web/Bookworm.Web/appsettings.json
+++ b/Web/Bookworm.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Bookworm;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "SqlServerConnection": "Server=.;Database=Bookworm;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
