Remove category image URL from Category
Add categories images to server and remove the category image URL property

--- a/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -53,6 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="wwwroot\images\bookCategories\" />
 	  <Folder Include="wwwroot\lib\admin-lte\dist\css\" />
 	</ItemGroup>
 </Project>
