--- a/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
+++ b/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
@@ -14,8 +14,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
-    <PackageReference Include="Sendgrid" Version="9.29.2" />
+    <PackageReference Include="MailKit" Version="4.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
