--- a/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -53,7 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="wwwroot\images\bookCategories\" />
+	  <Folder Include="wwwroot\images\categories\" />
 	  <Folder Include="wwwroot\lib\admin-lte\dist\css\" />
 	</ItemGroup>
 </Project>
