--- a/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
+++ b/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bookworm.Common\Bookworm.Common.csproj" />
+  </ItemGroup>
+
 </Project>
