--- a/Tests/Bookworm.Services.Data.Tests/Bookworm.Services.Data.Tests.csproj
+++ b/Tests/Bookworm.Services.Data.Tests/Bookworm.Services.Data.Tests.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="xunit" Version="2.8.0" />
+    <PackageReference Include="Xunit.Microsoft.DependencyInjection" Version="8.0.13" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
