--- a/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
+++ b/Services/Bookworm.Services.Messaging/Bookworm.Services.Messaging.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.5.0" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
