--- a/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -38,6 +38,8 @@
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.4" />
+		<PackageReference Include="Quartz" Version="3.9.0" />
+		<PackageReference Include="Quartz.Extensions.Hosting" Version="3.9.0" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
