Add new configuration options

--- a/src/Web/Bookworm.Web/Bookworm.Web.csproj
+++ b/src/Web/Bookworm.Web/Bookworm.Web.csproj
@@ -68,4 +68,6 @@
 	<ItemGroup>
 	  <None Include="wwwroot\js\book\addToFavorites.js" />
 	</ItemGroup>
+
+	<ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://json.schemastore.org/appsscript.json" /></VisualStudio></ProjectExtensions>
 </Project>
