--- a/src/Services/Bookworm.Services.Data/Bookworm.Services.Data.csproj
+++ b/src/Services/Bookworm.Services.Data/Bookworm.Services.Data.csproj
@@ -14,9 +14,9 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.6" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.8" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Bookworm.Services\Bookworm.Services.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data.Common\Bookworm.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\Bookworm.Data.Models\Bookworm.Data.Models.csproj" />
     <ProjectReference Include="..\..\Web\Bookworm.Web.ViewModels\Bookworm.Web.ViewModels.csproj" />
